edit code and add <p> tag